--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyClWNjo2g7TtaORdHWCze-WxsQRvqbd4Is",
+    authDomain: "shopping-cart-c2cdc.firebaseapp.com",
+    databaseURL: "https://shopping-cart-c2cdc.firebaseio.com",
+    projectId: "shopping-cart-c2cdc",
+    storageBucket: "",
+    messagingSenderId: "438376561249",
+    appId: "1:438376561249:web:c4a685ac4f486a4dde8820"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </body>
 </html>
