--- a/shopping-cart/public/index.html
+++ b/shopping-cart/public/index.html
@@ -62,5 +62,25 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
 </script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.5.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyAyTBlA49bKh0fTIBXmdagnfO5ASSdfwDE",
+    authDomain: "shopping-cart-a349c.firebaseapp.com",
+    databaseURL: "https://shopping-cart-a349c.firebaseio.com",
+    projectId: "shopping-cart-a349c",
+    storageBucket: "shopping-cart-a349c.appspot.com",
+    messagingSenderId: "406377467757",
+    appId: "1:406377467757:web:f7f737706a997297f51464"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
   </body>
 </html>
